# Personal-ops

./: .gitignore  NOTES.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_harness.py  status_update.md
.github/workflows/: ci.yml  publish.yml
agent/: __init__.py  graph.py  prompts.py  state.py
config/: settings.py
docker/postgres/: init.sql
harness/: __init__.py  metrics.py  report.py  runner.py  tasks.py
mcp_servers/: __init__.py  filesystem_server.py  github_server.py  notion_server.py  postgres_server.py
meeting_notes/: Harness_Engineering_30th_June_2026.md
tests/: test_agent.py
