[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-ops-agent"
version = "0.1.0"
description = "A LangGraph-powered personal ops assistant connecting local files, GitHub, PostgreSQL, and Notion via MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["langgraph", "mcp", "agent", "llm", "openai", "notion", "github", "postgres"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-mcp-adapters>=0.1.0",
  "mcp>=1.0.0",
  "fastmcp>=2.0.0",
  "openai>=1.50.0",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "notion-client>=2.2.0",
  "httpx>=0.27.0",
  "aiofiles>=23.2.1",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "rich>=13.7.0",
  "prompt_toolkit>=3.0.43",
  "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.urls]
Homepage      = "https://github.com/your-username/personal-ops-agent"
Repository    = "https://github.com/your-username/personal-ops-agent"
Issues        = "https://github.com/your-username/personal-ops-agent/issues"

[project.scripts]
personal-ops  = "main:main"
ops-harness   = "run_harness:main"

[tool.setuptools.packages.find]
include = ["agent*", "config*", "mcp_servers*", "harness*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.sql", "*.md"]

# ── Ruff (linter) ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
  "E501",   # line too long — handled by formatter
  "E402",   # module import not at top — intentional sys.path pattern in MCP servers
  "B008",   # do not perform function calls in default arguments
  "UP007",  # use X | Y for union types — kept for Python 3.11 compat
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["I001"]   # local imports inside test functions for monkeypatching

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
